WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172045
Null deref under WebContentReader::readURL when interacting with a file URL
https://bugs.webkit.org/show_bug.cgi?id=172045
Summary
Null deref under WebContentReader::readURL when interacting with a file URL
Tim Horton
Reported
2017-05-12 13:56:24 PDT
Null deref under WebContentReader::readURL when interacting with a file URL
Attachments
Patch
(6.76 KB, patch)
2017-05-12 13:57 PDT
,
Tim Horton
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-05-12 13:57:01 PDT
Created
attachment 309940
[details]
Patch
Wenson Hsieh
Comment 2
2017-05-12 18:12:20 PDT
Comment on
attachment 309940
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309940&action=review
> Tools/TestWebKitAPI/Tests/ios/DataInteractionTests.mm:550 > + EXPECT_WK_STREQ("<null>", [webView stringByEvaluatingJavaScript:@"editor.querySelector('a')"]);
Nit - Could we make this EXPECT_FALSE([[webView stringByEvaluatingJavaScript:@"!!editor.querySelector('a')"] boolValue]) instead?
Tim Horton
Comment 3
2017-05-15 12:22:08 PDT
https://trac.webkit.org/changeset/216868/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug