Null deref under WebContentReader::readURL when interacting with a file URL https://bugs.webkit.org/show_bug.cgi?id=172045 <rdar://problem/25880647>

Reviewed by Wenson Hsieh.

* editing/ios/EditorIOS.mm:
(WebCore::Editor::WebContentReader::readURL):
The AppSupport soft link was wrong, as there is no such framework in /System/Library/Frameworks.
Thus, any time we hit this codepath, the soft linked function would be null, and calling it would crash.
Instead of just fixing the soft link, remove the code, because it does not seem necessary to
special-case fileURLs to images in the media directory.

* TestWebKitAPI/Tests/ios/DataInteractionTests.mm:
(TestWebKitAPI::TEST):
The text of the file URL is pasted because a textual version of it gets
onto the pasteboard. However, this test would have crashed before. Also
tests that we don't make an <a>.


Canonical link: https://commits.webkit.org/189048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216868 268f45cc-cd09-0410-ab3c-d52691b4dbfc